src/test/deca/context/invalid/created/Objet/Passe_2/SameNameFields.deca
// Description:
//    teste la declaration d'une methode qui à le meme nom qu'un field
// Resultats:
//    SameNameFields.deca:8:4: Error: A field with the same name is already declared at [7, 4]

class A {
    int x;
    int x() {

    }
}

{

}